{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerMap",
            "id": "0c3b7bfe-eeb0-4528-9de6-cc32fcf573db",
            "actions": [
                {
                    "name": "Rotate",
                    "type": "Button",
                    "id": "19d66417-6b7e-486e-8a0e-1aa2270cb58f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "1dc51dd2-00b0-48be-ab20-917620aa035d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootBullet",
                    "type": "Button",
                    "id": "eb201e41-1860-457e-8673-65eb6c87fc27",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootLaser",
                    "type": "Button",
                    "id": "1928725c-5db3-4904-91b5-902c61db532b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "27cb6c21-961e-4983-ba37-1c7114cd4632",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b52a0e1c-34c3-4f90-a71b-35f0b3ddec34",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "5c262d5a-394f-472a-9e96-a4eb30355960",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "63b2bb4c-04c3-4bc4-b6b2-42e0cc03a266",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b57284bc-246f-4b56-a0ac-4732209e4c87",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootBullet",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "807d5fe7-7e73-4eec-9574-bfb0cf15665d",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootLaser",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}